--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
+    "@nuxt/ui": "^4.1.0",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   }
