--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt": "^4.1.3",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.12"
   }
 }
