--- a/package.json
+++ b/package.json
@@ -15,11 +15,20 @@
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^4.1.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
+    "pg": "^8.16.3",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.16.0",
+    "dotenv": "^17.2.3",
+    "prisma": "^7.2.0",
+    "tsx": "^4.21.0"
   }
 }
