--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^3.0.3",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
+    "nuxt-auth-utils": "^0.5.26",
     "pg": "^8.16.3",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
