feat: add Cloudinary integration for file uploads and update environment configuration

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,7 @@ DATABASE_URL="postgresql://"
 
 # openssl rand -hex 16
 NUXT_SESSION_PASSWORD=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
