--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
     "nuxt-auth-utils": "^0.5.26",
