--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuxt-auth-utils": "^0.5.26",
     "pg": "^8.16.3",
     "tailwindcss": "^4.1.17",
+    "uuid": "^13.0.0",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "zod": "^4.1.12"
